Fixes for running on Frat
Now `cargo run --release` works for the Frat PCB. Specifically the
correct stm32 chip needed to be set in the toml files and prob-rs needs
the connect-under-reset flag.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,5 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-# replace STM32G071C8Rx with your chip as listed in `probe-rs chip list`
-runner = "probe-rs run --chip STM32G484VETx"
+runner = "probe-rs run --connect-under-reset --chip STM32L562VETx"
 
 [build]
 target = "thumbv7em-none-eabi"
