--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 license = "MIT"
 
 [dependencies]
-embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = [ "defmt", "time-driver-any", "stm32g431rb", "memory-x", "unstable-pac", "exti"]  }
+embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = [ "defmt", "time-driver-any", "stm32l562ve", "memory-x", "unstable-pac", "exti"]  }
 embassy-sync = { version = "0.5.0", path = "embassy/embassy-sync", features = ["defmt"] }
 embassy-executor = { version = "0.4.0", path = "embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
 embassy-time = { version = "0.2", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
